Save button color

--- a/markpress/src/sass/settings.scss
+++ b/markpress/src/sass/settings.scss
@@ -14,7 +14,7 @@ $preview-bg:        #fff;
 $editor-bg:         #efefef;
 $code-bg:           #f6f6f6;
 $link:              #BD1550;
-$highlight:         #8A9B0F;
+$highlight:         #4a9b1f;
 
 $editor-color:      #111;
 $aside-color:       #ddd;
